--- a/style.css
+++ b/style.css
@@ -1,16 +1,28 @@
 *{margin:0; padding:0;}
 *{box-sizing: border-box;}
 .iconWrapper {
+    margin: 10px;
     display: flex;
     justify-content: space-around;
     align-items: center;
 }
+.icon {
+    width: 30px; height: 30px;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+    transition: all .3s;
+    color: rgb(204, 204, 204)
+ }
+ .icon:hover {
+     cursor: pointer;
+     color: rgb(68,68,68)
+ }
 
 .window{
     width:300px;
     height: 200px;
-    overflow: hidden;
-     
+    overflow: hidden;  
 }
 .images{
     display: flex;
@@ -19,5 +31,21 @@
 }
 .images >img{
     width:100%;
-  
+}
+#buttonWrapper >button {
+    margin: 10px;
+    background-color:rgb(131,208,242);
+    border: none;
+    border-radius: 3px;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 15px;
+    transition:all 0.2s;
+}
+#buttonWrapper >button:focus {
+    outline: none;
+    box-shadow: 0 1px 2px 1px rgba(0, 140, 186, .2); 
 }
