点击别处关闭浮层

--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 *{margin:0; padding:0;}
 *{box-sizing: border-box;}
+.container {
+    position: relative;
+    display: inline-block;
+}
 .iconWrapper {
     margin: 10px;
     display: flex;
@@ -34,6 +38,7 @@
 .images >img{
     width:100%;
 }
+
 #buttonWrapper >button {
     margin: 10px;
     background-color:rgb(131,208,242);
@@ -47,7 +52,54 @@
     font-size: 15px;
     transition:all 0.2s;
 }
+#buttonWrapper >button:hover {
+    cursor: pointer;
+}
 #buttonWrapper >button:focus {
     outline: none;
-    box-shadow: 0 1px 2px 1px rgba(0, 140, 186, .2); 
+    box-shadow: 0 0 3px rgba(0, 140, 186, .2); 
 }
+.clickWrapper {
+    margin: 10px 238px;
+}
+.clickMe {
+    text-align: center;
+    width:100%;
+    padding:10px;
+    background: rgb(239,239,239);
+    display: block;
+    border-radius: 3px;
+    box-shadow: 0 0 3px #AAAAAA;
+}
+.clickMe:hover {
+    cursor: pointer;
+}
+#popover {
+    margin: 10px 165px;
+    border: 1px solid rgb(69,90,100);
+    border-radius: 3px;
+    box-shadow: 0 0 3px #AAAAAA;
+    position: absolute;
+    top: 100%;
+    white-space: nowrap;
+    padding: 10px;
+    background: white;
+    display: none;
+}
+#popover::before{
+    position: absolute;
+    bottom: 100%;
+    left: 200px;
+    border: 10px solid transparent;
+    border-bottom-color: rgb(69,90,100);
+    content: '';
+  }
+#popover::after{
+    position: absolute;
+    bottom: 100%;
+    left: 200px;
+    border: 10px solid transparent;
+    border-bottom-color: white;
+    content: '';
+    margin-bottom: -1px;
+  }
